<resources>
    <string name="app_name">My Application</string>
    <string name="counterData">%d</string>
    <string name="btnCount">Count</string>
    <string name="btnReset">reset</string>
    <string name="countDownText">%d s</string>
    <string name="high_score_text">HIGH SCORE</string>
    <string name="max_result_high_score_text">%d</string>
    <string name="seconds_left">%d s</string>
</resources>